--- a/src/output.css
+++ b/src/output.css
@@ -972,6 +972,10 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:items-center {
+    align-items: center;
+  }
+
   .md\:gap-10 {
     gap: 2.5rem;
   }
